--- a/spring-mvc-002/pom.xml
+++ b/spring-mvc-002/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>thymeleaf-spring6</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+
     </dependencies>
 
 </project>
